--- a/src/styles.css
+++ b/src/styles.css
@@ -5,58 +5,13 @@ html, body {
     padding: 0;
 }
 
-table {
-    border-collapse: collapse;
-}
-
-thead tr {
-    background-color: #ccc;
-}
-
-tbody tr:nth-child(even) {
-    background-color: #e9e7e7;
-}
-
-tbody tr td  {
-   height: 30px;
-   padding: 3px;
-}
-
-tbody tr td:first-child  {
-    font-weight: bold;
-}
-
-tbody tr td:not(:first-child)  {
-    text-align: center;
-}
-
 table, th, td {
-    border: 1px solid #202020;
+    border: 1px solid #EDF2F7;
 }
 
-input[type=text], select {
-    width: 200px;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-  }
-
-.print-btn {
-    background-color: #009bce;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0 8px auto;
-    padding: 0 50px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-.print-btn:hover {
-    background-color: #0668c9;
+th, td {
+    padding: 5px !important;
+    text-align: center !important;
 }
 
 @media print {
@@ -66,39 +21,18 @@ input[type=text], select {
         box-sizing: border-box;
         display: table;
         table-layout: fixed;
-        /* margin: 10px; */
         margin: 10pt ;
         padding: 0;
         height: auto;
     }
 
-    table {
-        border-collapse: collapse;
-    }
-    
-    thead tr {
-        background-color: #ccc;
-    }
-
-    tbody tr:nth-child(even) {
-        background-color: #e9e7e7;
-    }
-
-    tbody tr td  {
-       height: 30px;
-       padding: 3px;
-    }
-
-    tbody tr td:first-child  {
-        font-weight: bold;
-    }
-
-    tbody tr td:not(:first-child)  {
-        text-align: center;
+    th, td {
+        padding: 5px !important;
+        text-align: center !important;
     }
 
     table, th, td {
-        border: 1px solid #202020;
+        border: 1px solid #EDF2F7;
     }
 
     @page { 
